tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__flags_bound_trigger_emit.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - events: `#[taurpc(event)]` methods were lifted into a `#[derive(ttipc::Event)]` enum (matching emit sites were rewritten to `Enum::Variant.emit(&h)`); drop any now-empty trait/impl.
//   - emit sites: a trigger bound to a variable was left as-is (only inline `Trigger::new(h)...` sites are rewritten); do it by hand as `Enum::Variant { .. }.emit(&h)` (or `.emit_to(&h, target)` for a `.send_to` site).

#[ttipc::procedures(path = "app")]
pub trait App {}
#[derive(ttipc::Event)]
pub enum AppEvent {
    Ready,
}
pub fn fire(h: AppHandle) {
    let bus = AppBus::new(h);
    bus.ready().unwrap();
}
