tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__leaves_non_taurpc_into_handler_alone.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
pub fn run() {
    let h = other_lib::Thing::new().into_handler();
    serve(h);
}
