tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__leaves_non_taurpc_items_alone.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
pub trait Plain {
    fn untouched(&self) -> u8;
}
