tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__no_header_when_nothing_needs_flagging.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
#[ttipc::procedures(path = "ping")]
pub trait Ping {
    async fn ping(&self);
}
