tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__resolver_impl_transform.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - errors: each `Result<_, E>` needs `E: ttipc::Error` (derive it on the error type).
//   - imports: drop the now-unused `Runtime`; `Channel` is now `ttipc::Channel`.
//   - de-async: methods with no blocking `.await` were made sync (ttipc's default), and their `.await`s on now-sync siblings were dropped.

#[ttipc::procedures(path = "greeter")]
pub trait Greeter {
    fn greet(&self, app_handle: AppHandle, name: String) -> Result<String>;
}
pub struct GreeterImpl;
impl Greeter for GreeterImpl {
    #[instrument(skip_all, err)]
    fn greet(&self, app_handle: AppHandle, name: String) -> Result<String> {
        Ok(format!("hi {name}"))
    }
}
