tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__rewrites_create_ipc_handler.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - mount: the TauRPC Router/handler became `ttipc::handler(..)` (a `-> Router` factory now returns `ttipc::Procedures`); generate bindings separately (`ttipc::Bindings`, replacing the dropped `export_config`) and keep app state on `.manage(..)`.

pub fn run() {
    tauri::Builder::default()
        .invoke_handler(ttipc::handler(AppImpl.into_procedures()))
        .run(tauri::generate_context!())
        .expect("error while running");
}
